[[bin]]
name = "test"
path = "src/test.rs"

[package]
name = "cargopackage"
version = "0.1.0"
authors = ["Adam"]
edition = "2018"

[dependencies]
sentry = "0.12.0"
sentry-actix = "0.11.0"
actix-web = "0.7"
actix-rt = "1"
serde = "1"
serde_json="0.9"
lazy_static = "1.4.0"
failure = "0.1.8"
#http = "0.2"
#andlers = "0.10"

#[dev-dependencies]
#failure_derive = "0.1.6"
#failure_ = { package = "failure", version = "0.1.6" }